--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="/css/style.css" />
         <script type="text/javascript" src="/vendor/bower_components/jquery/dist/jquery.js"></script>
         <script type="text/javascript" src="/vendor/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <% if(blocks.scripts) { blocks.scripts.html.forEach(function(script) { %><script type="text/javascript" src="<%- script %>"></script><%  })} %>
     </head>
     <body>
     <header><%- blocks.header %></header>
