--- a/views/layout/page.ejs
+++ b/views/layout/page.ejs
@@ -9,8 +9,8 @@
     </head>
     <body>
     <header><%- blocks.header %></header>
-    <section class="container">
-        <%- partial("../partials/topNavigation.ejs") %>
+    <section class="container ch-main-container">
+        <div class="ch-top-nav-container"><%- partial("../partials/topNavigation.ejs") %></div>
         <% if(blocks.title) { %>
             <h1><%- blocks.title%></h1>
         <% } %>
