--- a/views/partials/topNavigation.ejs
+++ b/views/partials/topNavigation.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="ch-top-nav navbar navbar-default" role="navigation">
     <ul class="nav navbar-nav navbar-left">
         <li><a href="/">Home</a></li>
         <% if(user) { %>
