--- a/views/partials/topNavigation.ejs
+++ b/views/partials/topNavigation.ejs
@@ -9,7 +9,7 @@
         <ul class="nav navbar-nav">
             <% if(user) { %>
             <li><a>Welcome <strong>'<%=user.name%>'</strong></a></li>
-            <li><a href="#" onclick="$.post('/logout', function(){ window.location = '/'; })">Logout</a></li>
+            <li><a onclick="$.post('/logout', function(){ window.location = '/'; })">Logout</a></li>
             <% } else { %>
             <li><a href="/login">Login</a></li>
             <% } %>
