--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,6 +43,7 @@
     });
 
     function login(){
+        $('body').mask();
         $.ajax('/login', {
             type: "POST",
             data: form.serialize(),
