--- a/views/partials/topNavigation.ejs
+++ b/views/partials/topNavigation.ejs
@@ -1,15 +1,15 @@
-<nav class="ch-top-nav navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
     <ul class="nav navbar-nav navbar-left">
         <li><a href="/">Home</a></li>
         <% if(user) { %>
-        <li><a href="/chart">Chart</a></li>
+        <li><a href="/chart">Chat</a></li>
         <% } %>
     </ul>
     <div class="navbar-collapse collapse navbar-right">
         <ul class="nav navbar-nav">
             <% if(user) { %>
             <li><a>Welcome <strong>'<%=user.name%>'</strong></a></li>
-            <li><a onclick="$.post('/logout', function(){ window.location = '/'; })">Logout</a></li>
+            <li><a onclick="$('body').mask(); $.post('/logout', function(){ window.location = '/'; })">Logout</a></li>
             <% } else { %>
             <li><a href="/login">Login</a></li>
             <% } %>
