--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,10 +11,10 @@
                     <form accept-charset="UTF-8" role="form" id="<%= formId %>" onsubmit="login();">
                         <fieldset>
                             <div class="form-group">
-                                <input class="form-control" placeholder="E-mail" name="email" type="text">
+                                <input class="form-control" placeholder="E-mail" name="email" type="text" required="true" >
                             </div>
                             <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                <input class="form-control" placeholder="Password" name="password" type="password" value="" required="true" >
                             </div>
                             <div class="form-group hide">
                                 <label class="control-label">Invalid login or password</label>
