--- a/views/partials/topNavigation.ejs
+++ b/views/partials/topNavigation.ejs
@@ -5,14 +5,12 @@
         <li><a href="/chart">Chat</a></li>
         <% } %>
     </ul>
-    <div class="navbar-collapse collapse navbar-right">
-        <ul class="nav navbar-nav">
-            <% if(user) { %>
-            <li><a>Welcome <strong>'<%=user.name%>'</strong></a></li>
-            <li><a onclick="$('body').mask('Loading...'); $.post('/logout', function(){ window.location = '/'; }).always(function(){ $('body').unmask();} ); ">Logout</a></li>
-            <% } else { %>
-            <li><a href="/login">Login</a></li>
-            <% } %>
-        </ul>
-    </div>
+    <ul class="nav navbar-nav navbar-right">
+        <% if(user) { %>
+        <li><a>Welcome <strong>'<%=user.name%>'</strong></a></li>
+        <li><a onclick="$('body').mask('Loading...'); $.post('/logout', function(){ window.location = '/'; }).always(function(){ $('body').unmask();} ); ">Logout</a></li>
+        <% } else { %>
+        <li><a href="/login">Login</a></li>
+        <% } %>
+    </ul>
 </nav>
