--- a/views/partials/topNavigation.ejs
+++ b/views/partials/topNavigation.ejs
@@ -1,11 +1,11 @@
-<nav class="navbar navbar-default" role="navigation">
-    <ul class="nav navbar-nav navbar-left">
+<nav class="ch-top-navbar navbar navbar-default" role="navigation">
+    <ul class="nav navbar-nav navbar-left collapse navbar-collapse">
         <li><a href="/">Home</a></li>
         <% if(user) { %>
         <li><a href="/chart">Chat</a></li>
         <% } %>
     </ul>
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
         <% if(user) { %>
         <li><a>Welcome <strong>'<%=user.name%>'</strong></a></li>
         <li><a onclick="$('body').mask('Loading...'); $.post('/logout', function(){ window.location = '/'; }).always(function(){ $('body').unmask();} ); ">Logout</a></li>
@@ -13,4 +13,5 @@
         <li><a href="/login">Login</a></li>
         <% } %>
     </ul>
+    <a class="mainmenu-close icon-cross"></a>
 </nav>
