--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% layout('./layout/page') -%>
 
 
-<div class="container">
+<div>
     <h2>Node js Chat Application</h2>
     Home page.
     <% if(user) { %>
