--- a/views/partials/topNavigation.ejs
+++ b/views/partials/topNavigation.ejs
@@ -1,17 +1,32 @@
-<nav class="ch-top-navbar navbar navbar-default" role="navigation">
-    <ul class="nav navbar-nav navbar-left collapse navbar-collapse">
-        <li><a href="/">Home</a></li>
-        <% if(user) { %>
-        <li><a href="/chart">Chat</a></li>
-        <% } %>
-    </ul>
-    <ul class="nav navbar-nav navbar-right collapse navbar-collapse">
-        <% if(user) { %>
-        <li><a>Welcome <strong>'<%=user.name%>'</strong></a></li>
-        <li><a onclick="$('body').mask('Loading...'); $.post('/logout', function(){ window.location = '/'; }).always(function(){ $('body').unmask();} ); ">Logout</a></li>
-        <% } else { %>
-        <li><a href="/login">Login</a></li>
-        <% } %>
-    </ul>
-    <a class="mainmenu-close icon-cross"></a>
-</nav>
+<div class="ch-top-navbar">
+    <div class="navbar-header" >
+        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+    </div>
+    <nav id="bs-navbar" class="collapse navbar-collapse">
+
+        <ul class="nav navbar-nav navbar-left">
+            <li><a href="/">Home</a></li>
+            <% if(user) { %>
+            <li><a href="/chart">Chat</a></li>
+            <% } %>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <% if(user) { %>
+            <li><a onclick="$('body').mask('Loading...'); $.post('/logout', function(){ window.location = '/'; }).always(function(){ $('body').unmask();} ); ">Logout</a></li>
+            <% } else { %>
+            <li><a href="/login">Login</a></li>
+            <% } %>
+        </ul>
+        <div class="navbar-text navbar-right navbar-collapse collapse">
+            <% if(user) { %>
+            Welcome <strong>'<%=user.name%>'</strong>
+            <% } %>
+        </div>
+    </nav>
+
+</div>
